fdo#65653 make columnMatchP safer

Change-Id: Id994ab5aed6172d8a93fd331a366fca10a663a48